# sentry-github-actions-app

./: .envrc  .flaskenv  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  GithubAppPostInstall.md  LICENSE  README.md  cli.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.frozen.txt  requirements.txt  setup.md  tox.ini
.github/workflows/: ci.yml  deploy.yml
src/: cli.py  config.py  event_handler.py  github_app.py  github_sdk.py  handle_event.py  lib.py  main.py  manage.py  sentry.py  sentry_config.py  settings.py  trace.py  web_app_handler.py  webapp.py  workflow_events.py
src/ghaTracing/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_etl.py  test_event_handler.py  test_github_app.py  test_github_sdk.py  test_handle_event.py  test_sentry_config_file.py  test_trace.py  test_web_app_handler.py
tests/fixtures/: __init__.py  failed_workflow.json  generated_transaction.json  skipped_workflow.json  webhook_event.json
tests/fixtures/jobA/: job.json  runs.json  trace.json  workflow.json
