[project]
name = "Github Actions to Sentry app"
version = "0.0.1"
description = "It listens to workflow events and inserts them into Sentry."
authors = [
    {name = "Armen Zambrano G.", email = "armenzg@sentry.io"},
]
license-expression = "MIT"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/armenzg/github-actions-app"

[tool.pytest.ini_options]
# -ra:  Show extra test summary info: (a)ll except passed
# -q:   Decrease verbosity
# --lf: Rerun only the tests that failed at the last run (or all if none failed)
addopts = "-ra -q"
testpaths = [ "tests" ]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
